Fixed spacing for delete buttons, now back to finishing edit modal

--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@ body {
   background-color: var(--swatch-accent);
 }
 
+
 #statusbar {
   grid-column: 1 / 3;
   grid-row: 4 / 5;
@@ -130,10 +131,19 @@ body {
   background-color: var(--swatch-complement);
 }
 
-.card-button, .card-button-disabled {
+.playlist-card-button, .playlist-card-button-disabled {
   font-size:18pt;
   border-width: 0px;
-  float: right;
+  float:right;
+  color: black;
+  cursor: pointer;
+}
+
+.song-card-button, .song-card-button-disabled {
+  font-size:18pt;
+  border-width: 0px;
+  margin-left: auto;
+  
   color: black;
   cursor: pointer;
 }
@@ -151,7 +161,7 @@ body {
 
 .song-card, .song-card-dragged-to, .unselected-song-card { 
   display:flex;
-  align-items: center;
+  grid-template-rows: 70% 30%;
   font-size: 16pt;
   height: 15%;
   padding: 20px;
